// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel plugin class component: code 1`] = `
"class ComponentClass extends Component {
  render() {
    return (
      <div
        data-vitro-line={4}
        data-vitro-filename=\\"/Users/morse/Documents/GitHub/react-comics/packages/babel-plugin-inject-location/filename.js\\"
      >
        <a>link</a>
        <SomeOtherComponent />
      </div>
    );
  }
}
"
`;

exports[`babel plugin closed element: code 1`] = `
"const x = (
  <a
    data-vitro-line={1}
    data-vitro-filename=\\"/Users/morse/Documents/GitHub/react-comics/packages/babel-plugin-inject-location/filename.js\\"
  >
    <div id=\\"Hello World!\\" />
  </a>
);
"
`;

exports[`babel plugin function component with early return: code 1`] = `
"function Component() {
  const [loading] = useState(true);

  if (loading) {
    return (
      <div
        data-vitro-line={5}
        data-vitro-filename=\\"/Users/morse/Documents/GitHub/react-comics/packages/babel-plugin-inject-location/filename.js\\"
      >
        <a>link</a>
        loading
      </div>
    );
  }

  return (
    <div
      data-vitro-line={12}
      data-vitro-filename=\\"/Users/morse/Documents/GitHub/react-comics/packages/babel-plugin-inject-location/filename.js\\"
    >
      <a>link</a>
      <SomeOtherComponent />
    </div>
  );
}
"
`;

exports[`babel plugin function component: code 1`] = `
"function Component() {
  return (
    <div
      data-vitro-line={3}
      data-vitro-filename=\\"/Users/morse/Documents/GitHub/react-comics/packages/babel-plugin-inject-location/filename.js\\"
    >
      <a>link</a>
      <SomeOtherComponent />
    </div>
  );
}
"
`;

exports[`babel plugin simple const jsx: code 1`] = `
"const x = (
  <a
    data-vitro-line={1}
    data-vitro-filename=\\"/Users/morse/Documents/GitHub/react-comics/packages/babel-plugin-inject-location/filename.js\\"
  >
    <div id=\\"Hello World!\\"></div>
  </a>
);
"
`;
